# mcp-toolkit

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.css  App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  commands.rs  commands_import.rs  import.rs  lib.rs  main.rs  mcps.rs  models.rs  projects.rs  router.rs  secrets.rs  storage.rs
src/pages/: Home.tsx  McpCatalog.tsx  ProjectDetail.tsx  RouterStatus.tsx  Secrets.tsx
