[package]
name = "mcp-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
rand = "0.8"
dirs = "5.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
